--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,5 @@
 authors = ["Claus Fieker <fieker@mathematik.uni-kl.de>"]
-name = "OscarPolymake"
+name = "OscarPolytope"
 uuid = "94e84bd4-f2f3-11e8-21aa-89ad04f9f271"
 version = "0.1.0"
 
