--- a/Project.toml
+++ b/Project.toml
@@ -1,8 +1,9 @@
-authors = ["Claus Fieker <fieker@mathematik.uni-kl.de>"]
 name = "OscarPolytope"
-uuid = "94e84bd4-f2f3-11e8-21aa-89ad04f9f271"
+uuid = "61a3517e-1e29-11e9-1fd3-4d098866440e"
+authors = ["Claus Fieker <fieker@mathematik.uni-kl.de>", "Sebastian Gutsche <gutsche@momo.math.rwth-aachen.de>"]
 version = "0.1.0"
 
 [deps]
-Polymake
-LinearAlgebra
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Nemo = "2edaba10-b0f1-5616-af89-8c11ac63239a"
+Polymake = "d720cf60-89b5-51f5-aff5-213f193123e7"
