--- a/Project.toml
+++ b/Project.toml
@@ -1,11 +1,21 @@
 name = "OscarPolytope"
 uuid = "61a3517e-1e29-11e9-1fd3-4d098866440e"
-authors = ["Claus Fieker <fieker@mathematik.uni-kl.de>", "Sebastian Gutsche <gutsche@momo.math.rwth-aachen.de>"]
-version = "0.1.0"
+authors = ["Marek Kaluba <kaluba@math.tu-berlin.de>", "Lars Kastner <kastner@math.tu-berlin.de>", "Sascha Timme <timme@math.tu-berlin.de>"]
+version = "0.2.0"
 
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
 Nemo = "2edaba10-b0f1-5616-af89-8c11ac63239a"
 Polymake = "d720cf60-89b5-51f5-aff5-213f193123e7"
+
+[compat]
+Nemo = "^0.16.0"
+Polymake = "^0.3.0"
+julia = "^1.0"
+
+[extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
