--- a/Project.toml
+++ b/Project.toml
@@ -6,8 +6,5 @@ version = "0.1.0"
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
-Polymake = "d720cf60-89b5-51f5-aff5-213f193123e7"
+Oscar = "f1435218-dba5-11e9-1e4d-f1a5fab5fc13"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-
-[compat]
-Polymake = "0.5.5"
